@@ -103,13 +103,13 @@ public class MainControllerTest {
         mainController.getGames().get(1).startIfFull();
 
         //set the starter card for each player
-        mainController.getGames().get(1).getModel().getAllPlayers().getFirst().setStarterCard(mainController.getGames().get(1).getModel().getAllPlayers().getFirst().getStarterCardToChose().get(0));
-        System.out.println(mainController.getGames().get(1).getModel().getAllPlayers().getFirst().getStarterCardToChose().get(0));
-        mainController.getGames().get(1).getModel().getAllPlayers().get(1).setStarterCard(mainController.getGames().get(1).getModel().getAllPlayers().get(1).getStarterCardToChose().get(0));
+//        mainController.getGames().get(1).getModel().getAllPlayers().getFirst().setStarterCard(mainController.getGames().get(1).getModel().getAllPlayers().getFirst().getStarterCardToChose()[0]);
+//        System.out.println(mainController.getGames().get(1).getModel().getAllPlayers().getFirst().getStarterCardToChose()[0]);
+//        mainController.getGames().get(1).getModel().getAllPlayers().get(1).setStarterCard(mainController.getGames().get(1).getModel().getAllPlayers().get(1).getStarterCardToChose()[0]);
 
         //set the objective card for each player
-        mainController.getGames().get(1).getModel().getAllPlayers().getFirst().setChosenObjectiveCard(mainController.getGames().get(1).getModel().getAllPlayers().getFirst().getSecretObjectiveCards().get(0));
-        mainController.getGames().get(1).getModel().getAllPlayers().get(1).setChosenObjectiveCard(mainController.getGames().get(1).getModel().getAllPlayers().get(1).getSecretObjectiveCards().get(0));
+        mainController.getGames().get(1).getModel().getAllPlayers().getFirst().setChosenObjectiveCard(mainController.getGames().get(1).getModel().getAllPlayers().getFirst().getSecretObjectiveCards()[0]);
+        mainController.getGames().get(1).getModel().getAllPlayers().get(1).setChosenObjectiveCard(mainController.getGames().get(1).getModel().getAllPlayers().get(1).getSecretObjectiveCards()[0]);
 
         // Play starter card
         mainController.getGames().get(1).getPlayers().getFirst().playStarterCard();
@@ -258,16 +258,6 @@ public class MainControllerTest {
             }
 
             @Override
-            public void nextTurn() throws RemoteException {
-
-            }
-
-            @Override
-            public void printModel() throws RemoteException {
-
-            }
-
-            @Override
             public void gameEnded() throws RemoteException {
 
             }
@@ -324,16 +314,6 @@ public class MainControllerTest {
         GameListener lis = new GameListener() {
             @Override
             public void modelChanged() throws RemoteException {
-
-            }
-
-            @Override
-            public void nextTurn() throws RemoteException {
-
-            }
-
-            @Override
-            public void printModel() throws RemoteException {
 
             }
 
